--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "^3.10.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
